Sat Apr 16 09:59:40 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* struct.c (struct_make_members_list): extract making member name
	  list from char* va_list, with creating symbols without
	  intermediate IDs.

Sat Apr 16 01:33:27 2016  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* tool/redmine-backporter.rb: sort revisions.

Sat Apr 16 01:16:02 2016  Tanaka Akira  <akr@fsij.org>

	* array.c (rb_ary_sum): Don't yield same element twice.
	  Found by nagachika.

Sat Apr 16 01:03:32 2016  Tanaka Akira  <akr@fsij.org>

	* array.c (rb_ary_sum): Fix SEGV by [1/2r, 1].sum.

Fri Apr 15 23:52:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* rational.c (rb_rational_plus): rename from rb_rational_add
	  to be aligned with rb_fix_plus.

	* array.c (rb_ary_sum): ditto.

	* internal.h: ditto.

Fri Apr 15 23:42:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* rational.c (rb_rational_add): rename from nurat_add.

	* array.c (rb_ary_sum): use rb_rational_add directly.

	* test/ruby/test_array.rb (test_sum): add assertions for an array of
	  Rational values.

Fri Apr 15 22:31:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* array.c (rb_ary_sum): apply the precision compensated algorithm
	  for an array in which Rational and Float values are mixed.

	* test/ruby/test_array.rb (test_sum): add assertions for the above
	  change.

Fri Apr 15 22:30:01 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_setname): defer setting native thread name
	  set in initialize until the native thread is created.
	  [ruby-core:74963] [Bug #12290]

Fri Apr 15 20:27:16 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/irb/ext/save-history.rb: Fix NoMethodError when method is not defined.

Fri Apr 15 15:38:58 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* common.mk (benchmark): order options for built-ruby and compare-ruby.

Fri Apr 15 14:14:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* test/ruby/test_array.rb (test_sum): add assertions for Rational and
	  Complex numbers.
