@@ -367,6 +367,13 @@ module TestStruct
     assert_nil(o.dig(:b, 0))
   end
 
+  def test_new_dupilicate
+    bug12291 = '[ruby-core:74971] [Bug #12291]'
+    assert_raise_with_message(ArgumentError, /duplicate member/, bug12291) {
+      @Struct.new(:a, :a)
+    }
+  end
+
   class TopStruct < Test::Unit::TestCase
     include TestStruct
 
